@@ -112,7 +112,7 @@ int    scan_http_init(int module_load)
 	/*
 	 * Add scanning hooks
 	*/
-	add_HookX(HOOKTYPE_SCAN_HOST, NULL, scan_http_scan); 
+	HookAddEx(HOOKTYPE_SCAN_HOST, NULL, scan_http_scan); 
 }
 
 /* Is first run when server is 100% ready */
@@ -132,7 +132,7 @@ DLLFUNC void	mod_unload(void)
 void	scan_http_unload(void)
 #endif
 {
-	del_HookX(HOOKTYPE_SCAN_HOST, NULL, scan_http_scan);
+	HookDelEx(HOOKTYPE_SCAN_HOST, NULL, scan_http_scan);
 }
 
 #define HICHAR(s)	(((unsigned short) s) >> 8)
