@@ -942,3 +942,6 @@ seen. gmtime warning still there
 - Updated makefile.win32 for the Auth system
 - Redid the event system somewhat
 - Fixed a little event issue involving data types.
+- Changed the name of the hook functions from add_Hook, del_Hook,
+  add_HookX, del_HookX to HookAdd, HookDel, HookAddEx, HookDelEx
+  so the names are more standard.
